--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<input type="checkbox">
 	<br>
 	<br>
+	<input type="checkbox" class="pretty-forms switch">
+	<br>
+	<br>
 	<input type="radio">
 	<br>
 	<br>
