--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 	<input type="checkbox">
 	<br>
 	<br>
-	<input type="checkbox" class="pretty-forms switch">
+	<input type="checkbox" class="pretty-forms">
+	
+	<label class="switch" for="che">
+	  <input type="checkbox" id="che">
+	  <span class="slider"></span>
+	</label>
+
+
 	<br>
 	<br>
 	<input type="radio">
