--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
 	<label class="switch" for="che">
 	  <input type="checkbox" id="che">
-	  <span class="slider"></span>
+	  <span></span>
 	</label>
 
 
