--- a/index.html
+++ b/index.html
@@ -13,15 +13,22 @@
 	<br>
 	<input type="checkbox" class="pretty-forms">
 	
-	<label class="switch" for="che">
-	  <input type="checkbox" id="che">
+	<label class="switch" for="E1">
+	  <input type="checkbox" id="E1">
 	  <span></span>
 	</label>
 
 
 	<br>
 	<br>
-	<input type="radio">
+
+	<input type="radio" class="pretty-forms">
+	<br>
+	<br>
+	<label class="radio" for="E2">
+		<input type="radio" id="E2">
+	</label>
+
 	<br>
 	<br>
 	<select>
