--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@
 	<br>
 
 	<input type="radio" class="pretty-forms">
-		<span >
-		
-		</span>
 	<br>
 	<br>
 	<label class="radio" for="E2">
 		<input type="radio" id="E2">
+		<span></span>
 	</label>
 
 	<br>
