--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 	<br>
 	<br>
 
-	<input type="radio" class="pretty-forms">
 	<br>
 	<br>
 	<label class="radio" for="E2">
 		<input type="radio" id="E2">
-		<span></span>
+		<span class="C1"></span>
 	</label>
+	
 
 	<br>
 	<br>
